--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="" />
+    <link rel="icon" href="assets/img/pokeball.png" type="img2/x-icon" />
+    <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Pokedex</title>
+  </head>
+  <body>
+    <header>
+      <nav class="widescreen-1440">
+        <img src="assets/img/pokeball.png" alt="Pokeball Logo" />
+        <h1>The Ultimate Pokedex</h1>
+      </nav>
+    </header>
+    <main>
+      <section class="widescreen-1440">
+        <div class="pokedex-content">
+          <div class="pokedex-card">
+            <div class="pokedex-card-info">
+              <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
+              <h2>Pokemon Namen</h2>
+            </div>
+
+            <img class="pokemon-image" src="assets/img/bisasam_ss.png" alt="" />
+          </div>
+          <div class="pokedex-card">
+            <div class="pokedex-card-info">
+              <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
+              <h2>Pokemon Namen</h2>
+            </div>
+
+            <img class="pokemon-image" src="assets/img/bisasam_ss.png" alt="" />
+          </div>
+          <div class="pokedex-card">
+            <div class="pokedex-card-info">
+              <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
+              <h2>Pokemon Namen</h2>
+            </div>
+
+            <img class="pokemon-image" src="assets/img/bisasam_ss.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
