--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Pokedex</title>
   </head>
-  <body>
+  <body onload="init()">
     <header>
       <nav class="widescreen-1440">
         <img src="assets/img/pokeball.png" alt="Pokeball Logo" />
@@ -18,33 +18,20 @@
     </header>
     <main>
       <section class="widescreen-1440">
-        <div class="pokedex-content">
+        <div id="main_content" class="main-content">
+          <!-- Hier wird reingerendert -->
           <div class="pokedex-card">
-            <div class="pokedex-card-info">
+            <div class="pokedex-card-image">
               <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
-              <h2>Pokemon Namen</h2>
+              <img class="pokemon-image" src="assets/img/bisasam.png" alt="">
             </div>
-
-            <img class="pokemon-image" src="assets/img/bisasam_ss.png" alt="" />
+            <div id="pokemon-name-info">Details</div>
           </div>
-          <div class="pokedex-card">
-            <div class="pokedex-card-info">
-              <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
-              <h2>Pokemon Namen</h2>
-            </div>
-
-            <img class="pokemon-image" src="assets/img/bisasam_ss.png" alt="" />
-          </div>
-          <div class="pokedex-card">
-            <div class="pokedex-card-info">
-              <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
-              <h2>Pokemon Namen</h2>
-            </div>
-
-            <img class="pokemon-image" src="assets/img/bisasam_ss.png" alt="" />
-          </div>
+          <!-- Ende Renderfeld -->
         </div>
       </section>
     </main>
+
   </body>
+  <script src="script.js"></script>
 </html>
