--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <section class="widescreen-1440">
         <div id="main_content" class="main-content">
-          <!-- Hier wird reingerendert -->
+          <!-- Renderfeld -->
           <div class="pokedex-card">
             <div class="pokedex-card-image">
               <img class="pokedex-icon" src="assets/img/pokedex.png" alt="" />
