--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles/general.css" />
+    <!-- FAVICON -->
     <link rel="icon" href="assets/img/pokeball-logo.png" type="img2/x-icon" />
     <title>Pauls Pokedex</title>
   </head>
@@ -33,8 +34,13 @@
     </header>
     <main>
       <section class="widescreen">
-        <div class="x-paddings"><div class="pokedex-wrapper"></div></div>
+        <div class="x-paddings">
+          <div id="pokemon-list" class="pokemon-list"></div>
+        </div>
       </section>
+      <dialog></dialog>
     </main>
+    <footer></footer>
+    <script src="script.js"></script>
   </body>
 </html>
