change js  structure

--- a/testbox.html
+++ b/testbox.html
@@ -1,2 +1,19 @@
-<img src="" alt="">
+<div class="pokemon-card">
+  <div class="pokemon-card-sprite">
+    <img src="${spriteUrl}" alt="${name}" />
+  </div>
+  <div class="pokemon-card-info">
+    <p>#${index}</p>
+    <h2>${name}</h2>
+    <div class="pokemon-card-types">
+        <div>Typ 1</div>
+        <div>Typ 2</div>
+    </div>
+  </div>
+</div>
+
+<img src="" alt="" />
 <h2>${pokemon.name}</h2>
+<p>${index}</p>
+
+<a href="https://pokeapi.co/api/v2/pokemon/1/"></a>
