--- a/testbox.html
+++ b/testbox.html
@@ -6,8 +6,8 @@
     <p>#${index}</p>
     <h2>${name}</h2>
     <div class="pokemon-card-types">
-        <div>Typ 1</div>
-        <div>Typ 2</div>
+        <div class="pokemon-card-type">Typ 1</div>
+        <div class="pokemon-card-type">Typ 2</div>
     </div>
   </div>
 </div>
