--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/pokemon_card.css" />
+    <link rel="stylesheet" href="styles/">
     <!-- FAVICON -->
     <link rel="icon" href="assets/img/pokeball-logo.png" type="img2/x-icon" />
     <title>Pauls Pokedex</title>
