--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/pokemon_card.css" />
-    <link rel="stylesheet" href="styles/" />
+    <link rel="stylesheet" href="styles/dialog.css" />
     <!-- FAVICON -->
     <link rel="icon" href="assets/img/pokeball-logo.png" type="img2/x-icon" />
     <title>Pauls Pokedex</title>
@@ -56,6 +56,9 @@
           <div class="dialog-stats">
             <p>Height: <span id="dialog-height">0</span></p>
             <p>Weight: <span id="dialog-weight">0</span></p>
+            <p>HP: <span id="dialog-hp">0</span></p>
+            <p>Attack: <span id="dialog-attack">0</span></p>
+            <p>Defense: <span id="dialog-defense">0</span></p>
           </div>
         </section>
       </div>
