--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
       <div class="dialog-wrapper" id="dialog-wrapper">
         <header class="dialog-header">
           <div class="dialog-header-box">
-            <h2 id="dialog-pokemon-name" class="dialog-pokemon-name">Pokemon Name</h2>
+            <h2 id="dialog-pokemon-name" class="dialog-pokemon-name">
+              Pokemon Name
+            </h2>
           </div>
 
           <button onclick="closeDialog()" class="close-button">X</button>
         </header>
 
-        <div class="dialog-image-section">
+        <div class="dialog-image-section" id="dialog-image-section">
           <img id="dialog-pokemon-image" src="" alt="" />
         </div>
 
