add pokemon slider

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         </div>
 
         <div class="dialog-info-section">
+          <div class="dialog-navigation-buttons">
+            <button class="dialog-navigation-button">◀︎ Vorherige</button>
+            <button class="dialog-navigation-button">Nächste ▶︎</button>
+          </div>
+
           <div class="info-box">
             <h3>Basic Info</h3>
             <div class="info-grid">
