--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                 type="text"
                 placeholder="Suche"
               />
-              <button class="delete-search-input" style="display: none">
+              <button
+                id="delete-search-button"
+                class="delete-search-input"
+                style="display: none"
+              >
                 <img src="assets/img/delete.png" alt="delete-button" />
               </button>
             </div>
