fix nav buttons with id

--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
 
         <div class="dialog-info-section">
           <div class="dialog-navigation-buttons">
-            <button class="dialog-navigation-button">◀︎ Vorherige</button>
-            <button class="dialog-navigation-button">Nächste ▶︎</button>
+            <button id="previous-button" class="dialog-navigation-button">
+              ◀︎ Vorherige
+            </button>
+            <button id="next-button" class="dialog-navigation-button">
+              Nächste ▶︎
+            </button>
           </div>
 
           <div class="info-box">
