--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <title>Pauls Pokedex</title>
   </head>
   <body>
+    <!-- Loading Spinner -->
+    <div id="loading-spinner" class="loading-spinner">
+      <img src="assets/img/loadingspinner.png" alt="Loading..." />
+    </div>
     <header>
       <div class="widescreen">
         <div class="x-paddings y-paddings navigation">
@@ -47,6 +51,12 @@
           <div id="pokemon-list" class="pokemon-list"></div>
         </div>
       </section>
+      <!-- Mehr laden Button -->
+      <div class="load-more-container">
+        <button id="load-more-button" class="load-more-button">
+          Mehr laden
+        </button>
+      </div>
     </main>
     <!-- Dialog für Pokemon Details -->
     <dialog id="pokemon-dialog" class="pokemon-dialog">
