--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
       </section>
       <!-- Mehr laden Button -->
       <div class="load-more-container">
-        <button id="load-more-button" class="load-more-button">
+        <button
+          id="load-more-button"
+          class="load-more-button"
+          onclick="loadMorePokemon()"
+        >
           Mehr laden
         </button>
       </div>
@@ -81,7 +85,6 @@
               Nächste ▶︎
             </button>
           </div>
-
           <div class="info-box">
             <h3>Basic Info</h3>
             <div class="info-grid">
