fix responsic dialog

--- a/index.html
+++ b/index.html
@@ -77,15 +77,17 @@
           <img id="dialog-pokemon-image" src="" alt="" />
         </div>
 
+        <!-- Navigation Buttons HIER -->
+        <div class="dialog-navigation-buttons">
+          <button id="previous-button" class="dialog-navigation-button">
+            ◀︎ Vorherige
+          </button>
+          <button id="next-button" class="dialog-navigation-button">
+            Nächste ▶︎
+          </button>
+        </div>
+
         <div class="dialog-info-section">
-          <div class="dialog-navigation-buttons">
-            <button id="previous-button" class="dialog-navigation-button">
-              ◀︎ Vorherige
-            </button>
-            <button id="next-button" class="dialog-navigation-button">
-              Nächste ▶︎
-            </button>
-          </div>
           <div class="info-box">
             <h3>Basic Info</h3>
             <div>
