--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <section class="widescreen">
         <div class="x-paddings">
           <div id="pokemon-list" class="pokemon-list"></div>
+          <div id="no-results" class="no-results" style="display: none">
+            <p>
+              ⚠️ Kein Pokémon gefunden. Deine Eingabe ist fehlerhaft!
+            </p>
+          </div>
         </div>
       </section>
       <!-- Mehr laden Button -->
